--- a/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Admin <admin@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 uvicorn = "^0.11.3"
 fastapi = "^0.54.1"
 python-multipart = "^0.0.5"
@@ -19,9 +19,9 @@ emails = "^0.5.15"
 raven = "^6.10.0"
 gunicorn = "^20.0.4"
 jinja2 = "^2.11.2"
-psycopg2-binary = "^2.8.5"
 alembic = "^1.4.2"
 sqlalchemy = "^1.3.16"
+PyMySQL = "^1.0.2"
 pytest = "^5.4.1"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 
